Bug 496946 - compilation issue: wrong conversions in worksheet.cpp
Summary: compilation issue: wrong conversions in worksheet.cpp
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Cantor Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-02 17:46 UTC by uwestoehr
Modified: 2024-12-04 17:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.02
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2024-12-02 17:46:58 UTC
On compiling today's master using MSVC on Windows I get some warnings for worksheet.cpp:

[364/411] Building CXX object src\test\CMakeFiles\testworksheet.dir\__\worksheet.cpp.obj
J:\LabPlotBuilds\7f6984e\cantor\src\worksheet.cpp(241): warning C4267: 'argument': conversion from 'size_t' to 'int', possible loss of data
J:\LabPlotBuilds\7f6984e\cantor\src\worksheet.cpp(275): warning C4267: 'argument': conversion from 'size_t' to 'int', possible loss of data
J:\LabPlotBuilds\7f6984e\cantor\src\worksheet.cpp(288): warning C4267: 'argument': conversion from 'size_t' to 'int', possible loss of data
J:\LabPlotBuilds\7f6984e\cantor\src\worksheet.cpp(1312): warning C4996: 'xmlSubstituteEntitiesDefault': was declared deprecated
J:\LabPlotBuilds\7f6984e\cantor\src\worksheet.cpp(1313): warning C4996: '__xmlLoadExtDtdDefaultValue': was declared deprecated
Comment 1 Alexander Semke 2024-12-04 17:47:05 UTC
Git commit e652a2a188b45f09b9d0904cae0a7f208ebe2024 by Alexander Semke.
Committed on 04/12/2024 at 17:46.
Pushed by asemke into branch 'master'.

Fixed warnings related to size_z vs int comparisons in worksheet.cpp and
remove the usage of deprecated functions in libxml2.
FIXED-IN: 25.02

M  +1    -1    src/hierarchyentry.cpp
M  +1    -1    src/hierarchyentry.h
M  +7    -13   src/worksheet.cpp

https://invent.kde.org/education/cantor/-/commit/e652a2a188b45f09b9d0904cae0a7f208ebe2024