Fixed warnings related to size_z vs int comparisons in worksheet.cpp and remove the usage of deprecated functions in libxml2.

BUG: 496946
FIXED-IN: 25.02